# TriggerPay

./: .gitignore  README.md  trial.md
.vercel/: project.json
agent/: .env.development.local.example  .env.example  docker-compose.yaml  package-lock.json  package.json
agent/src/: attestation.ts  index.ts  monitor.ts  near-client.ts
agent/src/routes/: agentAccount.ts  ethAccount.ts  monitor.ts  triggers.ts
agent/src/utils/: ethereum.ts  flight-api.ts  near-contract.ts  trigger-store.ts
contracts/triggerpay/: Cargo.toml
contracts/triggerpay/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/admin/set-status/: route.ts
frontend/src/app/api/agent/[...path]/: route.ts
frontend/src/app/api/agent/eth-account/: route.ts
frontend/src/app/api/agent/monitor/: route.ts
frontend/src/app/api/agent/monitor/activity/: route.ts
frontend/src/app/api/agent/triggers/: route.ts
frontend/src/app/api/agent/triggers/[id]/: route.ts
frontend/src/app/api/agent/triggers/stats/: route.ts
frontend/src/app/api/flight/[number]/: route.ts
frontend/src/components/: AdminPanel.tsx  CreateTriggerForm.tsx  Header.tsx  Providers.tsx  TriggersList.tsx
frontend/src/lib/: flightStore.ts
frontend/src/lib/agent/: activity-log.ts  ethereum.ts  trigger-store.ts
frontend/src/lib/near/: config.ts  contract.ts  wallet.ts
frontend/src/store/: wallet.ts
frontend/src/types/: contract.ts
scripts/: auto-commit.sh
